# elemental-echoes

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
public/wasm/: elemental_realms_bg.wasm
rust-game/: Cargo.toml
rust-game/src/: lib.rs
src/: index.css
src-tauri/: tauri.conf.json
src/game/: Collectibles.tsx  CombatEffects.tsx  Enemies.tsx  GameOverScreen.tsx  GameScene.tsx  HUD.tsx  MainMenu.tsx  Minimap.tsx  Player.tsx  Portals.tsx  RealisticSky.tsx  Terrain.tsx  types.ts  useGameState.ts  wasmBridge.ts
src/lib/wasm/elemental-realms/: elemental_realms.d.ts  elemental_realms.js  elemental_realms_bg.wasm.d.ts
src/pages/: Index.tsx
